--- a/Projects/Project 4/portfolio.html
+++ b/Projects/Project 4/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="test.css?v=1.0">
+    <link rel="stylesheet" href="portfolio.css?v=1.0">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 
     <title>ZIETSMAN</title>
@@ -205,6 +205,6 @@
         </form>
     </section>
 
-    <script src="test.js"></script>
+    <script src="portfolio.js"></script>
 </body>
 </html>
