--- a/Projects/Project 4/portfolio.html
+++ b/Projects/Project 4/portfolio.html
@@ -99,7 +99,7 @@
                  </div>
                  <!-- JavaScript  Program -->
                  <div class="col-sm-3">
-                    <a href="https://github.com/jonathanzietsman/Intro-To-Programming/blob/main/JavaScript%20for%20Kids/Chapters/Chapter%205/links.html">
+                    <a href="JavaScript for Kids/Chapters/Chapter 5/links.html">
                         <img width="300" height="300" src="https://img.icons8.com/bubbles/100/futurama-bender.png" class="img-responsive" alt="JavaScript Robot">
                     </a>
                     <p>Customizing my Own Javascript Program</p>
